Changed BattleManagement to BattleEngine to fit docx name, Moved main out of BattleEngine, Changed State to private attribute